@@ -7,6 +7,7 @@ New features
 - Charset independency (UTF-8, ISO-8859, ...)
 Bug fixes
 ~~~~~~~~~
+- #2150: missing header and sub METAL macro slots
 - #2139: automatically specify correct charset in <meta> tags
 - #2135: Fully specified URI rewriting is too specific
 - #2137: Accept any extension for theme pages
